# node-ffprobe

./: CMakeLists.txt  README.md  index.d.ts  index.js  package-lock.json  package.json  test.js
.github/workflows/: main.yml  node.js.yml  publish-npm.yml
src/: avchapter.cc  avchapter.h  avdictionary.h  avduration.cc  avduration.h  avformat-context.cc  avformat-context.h  avlog-reader.cc  avlog-reader.h  avprogram.cc  avprogram.h  avstream.cc  avstream.h  ffprobe.cc  instance-data.h  media-info-worker.cc  media-info-worker.h  util.cc  util.h
test-assets/: main.m3u  sub.m3u
